--- a/index.html
+++ b/index.html
@@ -147,9 +147,8 @@
 </script>
 
 
-<p id="calendar"> <input type="date"> <p>
-</div>
-
+<input type="date">
+	
 <div id="tool">
 Tool Library<br>
 510-981-6101<br>
