--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			font-family: sans-serif;
 			font-size: 0.8em;
         }
-.time {
+.timedate {
   background-color: #fff;
   color: #000;
   padding: 1px 6px;
@@ -111,7 +111,7 @@
 
 <br><br>
 
-<span class="time" id="berkeley"></span> <span class="time" id="paris"></span>
+<span class="timedate" id="berkeley"></span> <span class="timedate" id="paris"></span>
 
 <script>
   function isDST() {
@@ -147,7 +147,7 @@
 </script>
 
 
-<input type="date">
+<input type="date" class="timedate" />
 	
 <div id="tool">
 Tool Library<br>
