--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 </script>
 
 
-<input type="date" class="timedate" />
+<input type="date" class="timedate" /> <br/>
 	
 <div id="tool">
 Tool Library<br>
