--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
 
-<body onload="startTime()">
+<body onload="">
 
 <div id="topbar">
 	<a href="https://mail.google.com/"><img src="./svg/gmail.svg" alt="gmail"></a>
