--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       letter-spacing: 2px;
       border-radius: 4px;
       margin-right: 20px;
-      outline: none;
+      border: none;
       }
       a {
       color: #fff;
