--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       border-radius: 4px;
       margin-right: 20px;
       border: none;
+      outline: none;
       }
       a {
       color: #fff;
