--- a/index.html
+++ b/index.html
@@ -72,28 +72,25 @@
       <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=run+speed+test"><img src="./svg/speed.svg"></a>
       <a href="https://jsfiddle.net"><img src="./svg/jsfiddle.svg"></a>
       <a href="https://www.google.com/logos/fnbx/solitaire/standalone.html"><img src="./svg/solitaire.svg"></a>                
-      <a href="https://www.wikipedia.org"><img src="./wikipedia.png"></a>
-      <a href="https://news.google.com"><img src="./googlenews.png"></a>
-      <a href="https://keep.google.com"><img src="./keep.png"></a>
-      <a href="https://www.amazon.com/Prime-Video/b?node=2676882011"><img src="./primevideo.png"></a>
-      <a href="https://finance.yahoo.com/quotes/AAPL,AMZN,NVDA,NET,SYY,NIO,TSLA,MSFT,BNTX/view/v1/" alt="Yahoo"><img src="./yahoo_fin.png"></a>
+      
+      <a href="https://www.wikipedia.org"><img src="./svg/blank.svg"></a>
+      <a href="https://news.google.com"><img src="./svg/blank.svg"></a>
+      <a href="https://keep.google.com"><img src="./svg/blank.svg"></a>
+      <a href="https://www.amazon.com/Prime-Video/b?node=2676882011"><img src="./svg/blank.svg"></a>
       <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=run+speed+test"><img src="./svg/speed.png"></a>
-      <a href="https://maps.google.com"><img src="./googlemaps.png"></a>
-      <a href="https://www.windy.com/-Rain-thunder-rain?rain,37.777,-121.745,9,m:eH1acJA"><img src="./radar.png"></a>
-      <a href="https://www.homedepot.com"><img src="./homedepot.png"></a>
-      <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=weather+berkeley"><img src="./weather_berkeley.png"></a>
-      <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=weather+msp"><img src="./weather_msp.png"></a>
-      <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=weather+paris"><img src="./weather_paris.png"></a>
-      <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=weather+rome"><img src="./weather_rome.png"></a>
-      <a href="https://www.google.com/logos/fnbx/solitaire/standalone.html"><img src="./solitaire.png"></a>
-      <a href="https://www.nytimes.com/games/wordle/index.html"><img src="./wordle.png" alt="Wordle"></a>
-      <a href="https://ca.finance.yahoo.com/portfolios/"><img src="./portfolio.png"></a>
-      <a href="https://azure.microsoft.com/en-us/"><img src="./azure.png"></a>
-      <a href="https://kogswellcycles.com"><img src="./kogs.png"></a>
-      <a href="https://jlcpcb.com"><img src="./jlcpcb.png"></a>
-      <a href="https://www.aliexpress.us/"><img src="./ali.png"></a>
-      <a href="https://www.pythonanywhere.com/user/kogswell/"><img src="./pythonanywhere.png"></a>
-      <a href="https://wormhole.app/"><img src="./wormhole.png"></a>
+      <a href="https://maps.google.com"><img src="./svg/blank.svg"></a>
+      <a href="https://www.windy.com/-Rain-thunder-rain?rain,37.777,-121.745,9,m:eH1acJA"><img src="./svg/blank.svg"></a>
+      <a href="https://www.homedepot.com"><img src="./svg/blank.svg"></a>
+      <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=weather+berkeley"><img src="./svg/blank.svg"></a>
+      <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=weather+msp"><img src="./svg/blank.svg"></a>
+      <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=weather+paris"><img src="./svg/blank.svg"></a>
+      <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=weather+rome"><img src="./svg/blank.svg"></a>
+      <a href="https://azure.microsoft.com/en-us/"><img src="./svg/blank.svg"></a>
+      <a href="https://kogswellcycles.com"><img src="./svg/blank.svg"></a>
+      <a href="https://jlcpcb.com"><img src="./svg/blank.svg"></a>
+      <a href="https://www.aliexpress.us/"><img src="./svg/blank.svg"></a>
+      <a href="https://www.pythonanywhere.com/user/kogswell/"><img src="./svg/blank.svg"></a>
+      <a href="https://wormhole.app/"><img src="./svg/blank.svg"></a>
     </div>
     <br><br>
     <span class="timedate" id="berkeley"></span> <span class="timedate" id="paris"></span>
