--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <a href="https://wormhole.app/"><img src="./svg/blank.svg"></a>
     </div>
     <br><br>
-    <span class="timedate" id="berkeley"></span> <span class="timedate" id="paris"></span>
+    <span class="timedate" id="berkeley"></span> <span class="timedate" id="paris"></span><br><br>
     <script>
       function isDST() {
         const today = new Date();
