--- a/index.html
+++ b/index.html
@@ -3,55 +3,54 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script>
-      $( function() {
-        $( "#datepicker" ).datepicker();
-      } );
-    </script>
+
     <style>
       html {
-      background: #000;
-      color: #000;
-      font-family: sans-serif;
-      font-size: 0.8em;
+        background: #000;
+        color: #000;
+        font-family: sans-serif;
+        font-size: 0.8em;
       }
+
       .timedate {
-      background-color: #fff;
-      color: #000;
-      padding: 1px 6px;
-      font-family: monospace;
-      font-size: 1.4em;
-      font-weight: 900;
-      letter-spacing: 2px;
-      border-radius: 4px;
-      margin-right: 20px;
-      border: none;
-      outline: none;
+        background-color: #fff;
+        color: #000;
+        padding: 1px 6px;
+        font-family: monospace;
+        font-size: 1.4em;
+        font-weight: 900;
+        letter-spacing: 2px;
+        border-radius: 4px;
+        margin-right: 20px;
+        border: none;
+        outline: none;
       }
+
       a {
-      color: #fff;
+        color: #fff;
       }
+
       #calendar {
-      backround: #eee;
+        backround: #eee;
       }
+
       .aa {
-      background: #456;
-      color: #fff;
-      font-size: 1.5em;
-      letter-spacing: 2px;
-      font-weigtht: 900;
-      text-align: center;
-      display: inline flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      height: 128px;
-      width: 128px;
+        background: #456;
+        color: #fff;
+        font-size: 1.5em;
+        letter-spacing: 2px;
+        font-weigtht: 900;
+        text-align: center;
+        display: inline flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 128px;
+        width: 12
       }
-      #tool {
-      color: #fff;
-      }
+
     </style>
+    
   </head>
   <body onload="">
     <div id="topbar">
