--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
 
       .timedate {
-        background-color: #fff;
+        background-color: #fff;https://raw.githubusercontent.com/kogcyc/files/main/json.json 
         color: #000;
         padding: 1px 6px;
         font-family: monospace;
@@ -119,16 +119,18 @@
       S Closed
     </div>
     
-    <img src="./svg/matt.svg" style="display: block; margin-left: auto; margin-right: auto; width: 50%;">
+    <a href="https://raw.githubusercontent.com/kogcyc/files/main/json.json">files</a>
+    
+    <img src="./svg/matt.svg" style="display: block; margin-left: auto; margin-right: auto; width: 92%;">
    
       <a href="https://www.wikipedia.org"><img src="./svg/blank.svg"></a>
       <a href="https://news.google.com"><img src="./svg/blank.svg"></a>
       <a href="https://keep.google.com"><img src="./svg/blank.svg"></a>
       <a href="https://www.amazon.com/Prime-Video/b?node=2676882011"><img src="./svg/blank.svg"></a>
-      <a href="https://maps.google.com"><img src="./svg/blank.svg"></a>
+      <a href="https://maps.google.com"><img src="./svg/blank.svg"></a>https://raw.githubusercontent.com/kogcyc/files/main/json.json 
       <a href="https://www.windy.com/-Rain-thunder-rain?rain,37.777,-121.745,9,m:eH1acJA"><img src="./svg/blank.svg"></a>
       <a href="https://www.homedepot.com"><img src="./svg/blank.svg"></a>
-      <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=weather+berkeley"><img src="./svg/blank.svg"></a>
+      <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=weather+berhttps://raw.githubusercontent.com/kogcyc/files/main/json.json keley"><img src="./svg/blank.svg"></a>
       <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=weather+msp"><img src="./svg/blank.svg"></a>
       <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=weather+paris"><img src="./svg/blank.svg"></a>
       <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=weather+rome"><img src="./svg/blank.svg"></a>
