--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@
       M 10 - 6<br> 
       T 10 - 6<br> 
       W 12 - 6<br> 
+Tool Library
+510-981-6101
+M 10 - 6
+T 10 - 6
+W 12 - 6
+T 12 - 6
+F 10 - 6
+S 10 - 6
+S Closed 
       T 12 - 6<br> 
       F 10 - 6<br> 
       S 10 - 6<br> 
