--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       html {
         background: #000;
-        color: #000;
+        color: #fff;
         font-family: sans-serif;
         font-size: 0.8em;
       }
@@ -113,22 +113,13 @@
       M 10 - 6<br> 
       T 10 - 6<br> 
       W 12 - 6<br> 
-Tool Library
-510-981-6101
-M 10 - 6
-T 10 - 6
-W 12 - 6
-T 12 - 6
-F 10 - 6
-S 10 - 6
-S Closed 
       T 12 - 6<br> 
       F 10 - 6<br> 
       S 10 - 6<br> 
       S Closed
     </div>
     
-    <a href="https://raw.githubusercontent.com/kogcyc/files/main/json.json">files</a><br /><br />
+    <a href="https://raw.githubusercontent.com/kogcyc/files/main/json.json">files</a><br /><br /><br /><br />
     
     <img src="./svg/matt.svg" style="display: block; margin-left: auto; margin-right: auto; width: 92%;">
    
