--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
       F 10 - 6<br> 
       S 10 - 6<br> 
       S Closed
-    </div>
+    </div><br /><br />
     
     <a href="https://raw.githubusercontent.com/kogcyc/files/main/json.json">files</a><br /><br /><br /><br />
     
-    <img src="./svg/matt.svg" style="display: block; margin-left: auto; margin-right: auto; width: 92%;">
+    <img src="./svg/matt.svg" style="display: block; margin-left: auto; margin-right: auto; width: 92%; max-width: 350px;">
    
       <a href="https://www.wikipedia.org"><img src="./svg/blank.svg"></a>
       <a href="https://news.google.com"><img src="./svg/blank.svg"></a>
