--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
       <a href="https://github.com"><img src="./svg/github.svg"></a>
       <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=run+speed+test"><img src="./svg/speed.svg"></a>
       <a href="https://jsfiddle.net"><img src="./svg/jsfiddle.svg"></a>
-      <a href="https://www.google.com/logos/fnbx/solitaire/standalone.html"><img src="./svg/solitaire.svg"></a>                
+      <a href="https://www.google.com/logos/fnbx/solitaire/standalone.html"><img src="./svg/solitaire.svg"></a>
+      <a href="https://raw.githubusercontent.com/kogcyc/files/main/segno "><img src="./svg/segno.svg"></a>                 
     </div>
     <br><br>
     <span class="timedate" id="berkeley"></span> <span class="timedate" id="paris"></span><br><br>
