--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
       <a href="https://jsfiddle.net"><img src="./svg/jsfiddle.svg"></a>
       <a href="https://www.google.com/logos/fnbx/solitaire/standalone.html"><img src="./svg/solitaire.svg"></a>
       <a href="https://kogcyc.github.io/files/segno.html"><img src="./svg/segno.svg"></a>   
-      <a href="https://www.google.com/maps"><img src="./svg/maps.svg"></a>              
+      <a href="https://www.google.com/maps"><img src="./svg/maps.svg"></a>   
+      <a href="https://kogcyc.github.io/kogapps/htmlFiddle/"><img src="./svg/htmlFiddle.svg"></a>  
+      <a href="https://kogcyc.github.io/kogapps/svgFiddle/"><img src="./svg/svgFiddle.svg"></a>  
     </div>
     <br><br>
     <span class="timedate" id="berkeley"></span> <span class="timedate" id="paris"></span><br><br>
