mess with the clock a little

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 
         <svg id="clock" xmlns="http://www.w3.org/2000/svg" width="100" height="100">
           <circle cx="50" cy="50" r="45" fill="#222" />
-          <line id="hourHand" x1="50" y1="50" x2="50" y2="24" stroke="#fff" stroke-width="4" />
-          <line id="minuteHand" x1="50" y1="50" x2="50" y2="14" stroke="#fff" stroke-width="4" />
-          <circle cx="50" cy="50" r="3" fill="#f00" />
-          <line id="secondHand" x1="50" y1="55" x2="50" y2="10" stroke="red" stroke-width="2" />
+          <line id="hourHand" x1="50" y1="50" x2="50" y2="24" stroke="#222" stroke-width="4" />
+          <line id="minuteHand" x1="50" y1="50" x2="50" y2="14" stroke="#222" stroke-width="4" />
+          <circle cx="50" cy="50" r="3" fill="#222" />
+          <line id="secondHand" x1="50" y1="55" x2="50" y2="10" stroke="#222" stroke-width="2" />
         </svg>
 
       </span>
@@ -179,6 +179,22 @@
         secondHand.setAttribute('transform', `rotate(${secondsAngle} 50 50)`);
         minuteHand.setAttribute('transform', `rotate(${minutesAngle} 50 50)`);
         hourHand.setAttribute('transform', `rotate(${hoursAngle} 50 50)`);
+
+        // Get the SVG elements using their IDs or tags
+        //var circleElement = document.querySelector('circle');
+        var hourHandElement = document.getElementById('hourHand');
+        var minuteHandElement = document.getElementById('minuteHand');
+        var secondHandElement = document.getElementById('secondHand');
+        var redCircleElement = document.querySelector('circle[fill="#f00"]');
+
+        // Set the 'fill' attribute for each element
+        //circleElement.setAttribute('fill', '#222'); // replace '#your_fill_color' with the desired color
+        hourHandElement.setAttribute('fill', '#fff');
+        minuteHandElement.setAttribute('fill', '#fff');
+        secondHandElement.setAttribute('fill', '#f00');
+        redCircleElement.setAttribute('fill', '#f00');
+
+        
       }
 
       setInterval(updateClock, 1000);
