fixed clock hands

--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
         hourHand.setAttribute('transform', `rotate(${hoursAngle} 50 50)`);
 
     // Get the elements by their IDs
-    var hourHand = document.getElementById("hourHand");
-    var minuteHand = document.getElementById("minuteHand");
-    var secondHand = document.getElementById("secondHand");
+    //var hourHand = document.getElementById("hourHand");
+    //var minuteHand = document.getElementById("minuteHand");
+    //var secondHand = document.getElementById("secondHand");
 
     // Change the 'stroke' color
     hourHand.setAttribute("stroke", "#fff"); // Change to your desired color
