--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <a href="https://chat.openai.com/"><img src="./svg/chatgpt.svg" alt="chatGPT"></a>
       <a href="https://www.nytimes.com/games/wordle/index.html"><img src="./svg/wordle.svg" alt="Wordle"></a>
       <a href="https://sfbay.craigslist.org/"><img src="./svg/craigslist.svg" alt="Craigslist"></a>
-      <a href="https://finance.yahoo.com/quotes/AAPL,AMZN,NVDA,NET,SYY,NIO,TSLA,MSFT,BNTX,LMT,TXT,RTX,BA,GD/view/v1/"><img src="./svg/yahoofin.svg" alt="YFinance"></a>
+      <a href="https://finance.yahoo.com/quotes/SPY,AAPL,AMZN,NVDA,NET,SYY,NIO,TSLA,MSFT,BNTX,LMT,TXT,RTX,BA,GD/view/v1/"><img src="./svg/yahoofin.svg" alt="YFinance"></a>
       <a href="https://github.com"><img src="./svg/github.svg"></a>
       <a href="https://www.google.com/search?channel=fs&client=ubuntu&q=run+speed+test"><img src="./svg/speed.svg"></a>
       <a href="https://jsfiddle.net"><img src="./svg/jsfiddle.svg"></a>
