--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         font-size: 0.8em;
       }
 
+          <% if (other_background) { %>
+    html {
+      background: <%= other_background %>;
+    }
+    <% } %>
+
       .timedate {
         background-color: #fff;
         https: //raw.githubusercontent.com/kogcyc/files/main/json.json 
