--- a/index.html
+++ b/index.html
@@ -13,27 +13,13 @@
       }
 
       a {
-        color: #fff;
+        color: #fff;22
       }
 
       #calendar {
         backround: #eee;
       }
 
-      .aa {
-        background: #456;
-        color: #fff;
-        font-size: 1.5em;
-        letter-spacing: 2px;
-        font-weight: 900;
-        text-align: center;
-        display: inline flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        height: 128px;
-        width: 12;
-      }
     </style>
   </head>
 
@@ -42,11 +28,11 @@
       <span>
         <svg
           id="clock"
-          xmlns="http://www.w3.org/2000/svg"
+          xmlns="http://www.w3.org/2000/svg"22
           width="100"
           height="100"
         >
-          <circle cx="50" cy="50" r="45" fill="#332" />
+          <circle cx="50" cy="50" r="45" fill="#221" />
           <line
             id="hourHand"
             x1="50"
