--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
     </div>
     <br /><br />
 
+
+<input type="date">
+<br /><br />
+    
     <div id="tool">
       Tool Library<br />
       510-981-6101<br />
