--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         ><img src="./svg/craigslist.svg" alt="Craigslist"
       /></a>
       <a
-        href="https://finance.yahoo.com/quotes/SPY,PLTR,AMZN,NVDA,NET,MSFT,AAPL,LMT,TXT,RTX,BA,GD/view/v1/"
+        href="https://finance.yahoo.com/quotes/SPY,AMZN,NVDA,PLTR,NET,MSFT,AAPL,LMT,TXT,RTX,BA,GD/view/v1/"
         ><img src="./svg/yahoofin.svg" alt="YFinance"
       /></a>
       <a href="https://github.com"><img src="./svg/github.svg" /></a>
