--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
         ><img src="./svg/svgFiddle.svg"
       /></a>
       <a href="https://www.mpb.com"><img src="./svg/mpb.svg" /></a>
+      <a>
+        <svg width="128" height="128" xmlns="http://www.w3.org/2000/svg">
+
+<path d="M 26,64 C 64,30 64,100 102,64"
+style="fill:none;stroke:#068;stroke-width:15;stroke-linecap:round" />
+
+</svg>
+      </a>
     </div>
     <br /><br />
 
