--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
       /></a>
       <a href="https://www.mpb.com"><img src="./svg/mpb.svg" /></a>
       <a>
-        <svg width="128" height="128" xmlns="http://www.w3.org/2000/svg">
+<svg width="48" height="48" xmlns="http://www.w3.org/2000/svg">
 
-<path d="M 26,64 C 64,30 64,100 102,64"
-style="fill:none;stroke:#068;stroke-width:15;stroke-linecap:round" />
+<path d="M 2,24 C 24,2 24,46 46,24"
+style="fill:none;stroke:#f70;stroke-width:5;stroke-linecap:round" />
 
 </svg>
       </a>
