--- a/index.html
+++ b/index.html
@@ -116,12 +116,7 @@
       /></a>
       <a href="https://www.mpb.com"><img src="./svg/mpb.svg" /></a>
       <a>
-<svg width="48" height="48" xmlns="http://www.w3.org/2000/svg">
-
-<path d="M 2,24 C 24,2 24,46 46,24"
-style="fill:none;stroke:#f70;stroke-width:5;stroke-linecap:round" />
-
-</svg>
+        <svg width="96" height="96" xmlns="http://www.w3.org/2000/svg"><path d="M 6,48 C 48,2 48,94 90,48"style="fill:none;stroke:#490;stroke-width:12;stroke-linecap:round" /></svg>
       </a>
     </div>
     <br /><br />
